--- a/index.html
+++ b/index.html
@@ -50,6 +50,32 @@
         <p>Lemon drops tiramisu sesame snaps oat cake marshmallow sugar plum liquorice. Tootsie roll pastry cake gummi bears pastry toffee tootsie roll candy. Pastry sesame snaps wafer liquorice. Gummies macaroon tiramisu jelly beans soufflé brownie ...</p>
       </section>
     </div>
+    <div class="extra-articles">
+      <section class="extra">
+        <h5>Extra Article 1</h5>
+        <p class="article">More garbage about baked goods and blah blah blah blah blah and sweet tooth leads to tooth decay and copious visits to the dentist. Increased sugar intake can also cause hormonal issues like acne and sugar withdrawal.</p>
+        </section>
+        <section class="extra">
+          <h5>Extra Article 2</h5>
+        <p class="article">More garbage about baked goods and blah blah blah blah blah and sweet tooth leads to tooth decay and copious visits to the dentist. Increased sugar intake can also cause hormonal issues like acne and sugar withdrawal.</p>
+      </section>
+      <section class="extra">
+        <h5>Extra Article 3</h5>
+        <p class="article">More garbage about baked goods and blah blah blah blah blah and sweet tooth leads to tooth decay and copious visits to the dentist. Increased sugar intake can also cause hormonal issues like acne and sugar withdrawal.</p>
+      </section>
+      </section>
+    </div>
+    <footer>
+      <ul>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">CONTACT</a></li>
+        <li><a href="#">HELP</a></li>
+        <li><a href="#">ACCESSIBILITY</a></li>
+        <li><a href="#">PRIVACY POLICY</a></li>
+        <li><a href="#">TERMS of SERVICE</a></li>
+        <li><a href="#">CAREERS</a></li>
+      </ul>
+    </footer>
   </div>
 </body>
 </html>
